Fixes more info button spacing in firefox & maybe in IE Changes logo to png, fixes display in IE Changes logo font to Quattrocento

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,500|Orbitron:400);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,500|Orbitron:400|Quattrocento+Sans:400);
 @import "compass/css3/images";
 @import "compass/css3/text-shadow";
 
@@ -236,13 +236,10 @@ div.more-info {
  position:relative;
  h4 div {
   color:#fff;
-  -webkit-animation: pulsate 1.5s ease-in-out infinite;
   display:inline-block;
-  padding-top:35px;
-  padding-left:5px;
-  padding-right: 25px;
   background-color:#252628;
   border-radius:8px;
+  padding:20px 40px 20px 40px;
  }
  top:30px;
 }
@@ -359,12 +356,13 @@ i.right-float {
 /******************************************/
 /* Header */
 /******************************************/
+
 .logo {
   padding:15px 10px 5px 15px;
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Quattrocento Sans', sans-serif;
   font-weight:400;
   font-size:16pt;
-  letter-spacing:1.5px;
+  letter-spacing:.8px;
   img {
     margin-top:-4px;
   }
